--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "devDependencies": {
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
+    "@gfx/zopfli": "^1.0.14",
     "autoprefixer": "^9.1.5",
     "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^0.1.19",
+    "compression-webpack-plugin": "^4.0.0",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -39,6 +42,7 @@
     "jquery": "^3.3.1",
     "motion-ui": "^2.0.3",
     "ol": "^6.1.1",
+    "webpack-shell-plugin": "^0.5.0",
     "what-input": "^5.2.1"
   }
 }
