--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
-assets/**/* filter=lfs diff=lfs merge=lfs -text
+frontend/assets/**/* filter=lfs diff=lfs merge=lfs -text
