--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: apt install pngquant -y
+    - run: sudo apt install pngquant -y
     - run: npm install -g yarn
     - run: yarn install
     - run: yarn run build
