--- a/docker/envoy.yaml
+++ b/docker/envoy.yaml
@@ -23,7 +23,7 @@ static_resources:
                       routes:
                         - match: { prefix: "/" }
                           route:
-                            cluster: greeter_service
+                            cluster: verimapcom_service
                             max_grpc_timeout: 0s
                       cors:
                         allow_origin_string_match:
