--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,49 +1,29 @@
 {
   "name": "verimap.com",
   "version": "1.0.0",
-  "main": "src/app/index.js",
+  "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "serve": "webpack-dev-server --history-api-fallback --progress --config webpack.config.development.js",
-    "watch": "webpack --watch --mode development --config webpack.config.development.js",
-    "build": "webpack --mode production --config webpack.config.production.js"
+    "compress": "./compress.sh",
+    "watch": "cross-env NODE_ENV=production parcel --public-url /dist src/index.ts",
+    "build": "cross-env NODE_ENV=production parcel --public-url /dist build src/index.ts && ./compress.sh"
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
     "@gfx/zopfli": "^1.0.14",
-    "autoprefixer": "^9.1.5",
-    "babel-loader": "^8.0.2",
-    "clean-webpack-plugin": "^0.1.19",
-    "compression-webpack-plugin": "^4.0.0",
-    "css-loader": "^1.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^2.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "imagemin-webpack-plugin": "^2.4.2",
-    "mini-css-extract-plugin": "^0.4.2",
-    "node-sass": "^4.9.3",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
-    "uglifyjs-webpack-plugin": "^2.0.0",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.19.0",
-    "webpack-bundle-analyzer": "^3.0.2",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8",
-    "webpack-merge": "^4.1.4"
+    "cross-env": "^7.0.2",
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.26.9",
+    "typescript": "^3.9.5"
   },
   "dependencies": {
-    "copy-webpack-plugin": "^5.0.3",
     "foundation-sites": "^6.5.3",
+    "google-protobuf": "^3.12.2",
     "grpc-web": "^1.2.0",
     "jquery": "^3.3.1",
     "motion-ui": "^2.0.3",
     "ol": "^6.1.1",
-    "webpack-shell-plugin": "^0.5.0",
     "what-input": "^5.2.1"
   }
 }
