--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "compress": "./compress.sh",
-    "watch": "cross-env NODE_ENV=production parcel --public-url /dist src/index.ts",
+    "watch": "cross-env NODE_ENV=development parcel --public-url /dist src/index.ts",
     "build": "cross-env NODE_ENV=production parcel --public-url /dist build src/index.ts && ./compress.sh"
   },
   "devDependencies": {
